[package]
name = "wheatley_tester"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Wilson <josephcwilson47@gmail.com>"]
description = "A tester for UCI Compatible chess engines, focuses on those that are designed to lose"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
